--- a/resources/_boiler.html
+++ b/resources/_boiler.html
@@ -33,18 +33,6 @@
         </li>
       </ul>
     </nav>
-    <section class="landing">
-      <div class="landing-inner">
-        <h1 class="x-large">Developer Connector</h1>
-        <p class="lead">
-          Create developer profile/portfolio, share posts and get help from
-          other developers
-        </p>
-        <div class="buttons">
-          <a href="register.html" class="btn btn-primary">Sign Up</a>
-          <a href="login.html" class="btn">Login</a>
-        </div>
-      </div>
-    </section>
+    <section class="container"></section>
   </body>
 </html>
